[gd_scene load_steps=3 format=3 uid="uid://tv88ia00qmed"]

[ext_resource type="Script" path="res://Battle/coin_ui/skill_box.gd" id="1_cau6c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp4h5"]
content_margin_left = 5.0
content_margin_top = 1.0
content_margin_right = 5.0
content_margin_bottom = 1.0
bg_color = Color(0.305882, 0.305882, 0.305882, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="SkillBox" type="Control"]
custom_minimum_size = Vector2(240, 190)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cau6c")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillBoxContainer" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -91.0
offset_right = 110.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="NameLabel" type="Label" parent="Panel/SkillBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "NOMBRE"
horizontal_alignment = 1
uppercase = true

[node name="DescriptionLabel" type="RichTextLabel" parent="Panel/SkillBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_wp4h5")
bbcode_enabled = true
text = "HACE ALGO
CON DOS LINEAS"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/SkillBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SlotBox" type="HBoxContainer" parent="Panel/SkillBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 4.0

[node name="UsesLabel" type="Label" parent="Panel/SkillBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "x 3"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/SkillBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="ExecuteButton" type="Button" parent="Panel/SkillBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Execute"

[node name="UndoButton" type="Button" parent="Panel/SkillBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "Undo"

[node name="CoinAudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="NotificationAudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -4.0

[connection signal="pressed" from="Panel/SkillBoxContainer/ButtonContainer/ExecuteButton" to="." method="_on_ExecuteButton_pressed"]
[connection signal="pressed" from="Panel/SkillBoxContainer/ButtonContainer/UndoButton" to="." method="_on_UndoButton_pressed"]
